--- a/src/index.css
+++ b/src/index.css
@@ -230,9 +230,15 @@ background: var(--clr-black);
 .valeur-details p{
   
   color: var(--clr-white);
-  font-family: var(--fnt-primary-1);
+  font-family: var(--fnt-primary-3);
   max-width: 35rem;
   font-size: 1.5rem;
+}
+.valeur-details span{
+  color: var(--clr-white);
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: var(--spacing);
 }
 @media (min-width:992px) {
   .valeur-details p{
@@ -839,7 +845,7 @@ border-radius: var(--radius);
   left: 0;
   right: 0;
   z-index: 999;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: var(--clr-black);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -853,7 +859,7 @@ border-radius: var(--radius);
   position: fixed;
   cursor: pointer;
   opacity: 0.6;
-  color: #fff;
+  color: var(--clr-white);
   z-index: 9999;
 }
 
@@ -896,6 +902,104 @@ border-radius: var(--radius);
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
+/* avantage */
+.about-avantage{
+  position: relative;
+  margin-top: 5rem;
+  background: var(--clr-black);
+}
+.avantages{
+margin: 0.5rem;
+cursor: pointer;
+transition: var(--transition);
+border-radius: var(--radius);
+box-shadow:var(--light-shadow);
+}
+.avantages:hover{
+  transform: scale(1.1);
+}
+.a1,
+.a2,
+.a3{
+ 
+  background: var(--clr-white);
+  width: 100%;
+  height: 200px;
+}
+.avantages{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.avantages img{
+  width: 100px;
+}
+.avantages h3{
+  color: var(--clr-black);
+}
+@media (min-width:768px) {
+  .container-avantage{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 5rem;
+  }
+}
+/* animates */
+.outer{
+  position:relative;
+  /* margin-top: 300px;
+  margin-left:600px */
+}
+.animates{
+  font-size:1rem;
+  color: var(--clr-black);
+  
+}
+.inner{
+  position:absolute;
+  border:0px solid var(--clr-white);
+  height:50px;
+  line-height:50px;
+  font-size:1.5rem;
+  text-transform:uppercase;
+  overflow:hidden;
+  display:inline-block;
+  left: 0;
+  
+}
+.inner span{
+  animation:animate 20s ease infinite;
+  position:relative;
+  color:var(--clr-primary-11);
+}
+@keyframes animate{
+  0%,100%{
+    top:0;
+  }
+  20%{
+    top:0px;
+  }  
+  25%{
+    top:-50px;
+  }
+  45%{
+    top:-50px;
+  }
+  50%{
+    top:-100px;
+  }
+  70%{
+    top:-100px;
+  }
+  75%{
+    top:-150px;
+  }
+  95%{
+    top:-150px;
+  }
+}
+
 
 /* boutique */
 .boutique{
@@ -922,6 +1026,11 @@ border-radius: var(--radius);
 /* contact */
 .contact img{
   width: 100%;
+}
+.contacts p{
+  text-align: center;
+  font-size: 2rem;
+  color: var(--clr-white);
 }
 .contact-contact-links{
   position: relative;
